@@ -1,3 +1,9 @@
+2001-12-25  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* [w3m-dev 02721]
+	* main.c (resize_handler): added
+	* main.c (MAIN): use resize_handler in getch()
+
 2001-12-25  WATANABE Katsuyuki <katsuyuki_1.watanabe@toppan.co.jp>
 	
 	* [w3m-dev 02714] 
